welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: identifier expected but integer literal found.
	if (bis:Int>=3) {
                     ^Poucet:17: error: ')' expected but '}' found.
} while (croisement()=="true")
^